2011-07-23  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: Use AM_ICONV_LINK...

	* src/script.c: Fix a buffer overflow problem. Thanks Frederic Germain.

	* src/minicom.c: Do not use iconv-functions if iconv is not available.

2011-05-28  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c, src/main.c, src/vt100.c, src/vt100.h: Add transmit
	  delay for every character, based on patch by Nicolas PILLON.

2011-04-16  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c: Do not extend tilde to home directory for
	  non-path arguments. Debian bug #621741

	* configure.in, src/Makefile.am: Add workaround and then use
	  libiconv for linking, fixes build issue on Mac OS X.

2011-03-23  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c: Increase serial port open timeout, by
	  Lubomir Rintel

	* src/main.c: Set sensible errno if port open times out,
	  by Lubomir Rintel

2011-02-28  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/help.c: Help fix for timestamp toggle by Mark Einon

2011-02-20  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Code consolidation.

	* src/minicom.c, src/minicom.h, src/vt100.c, man/minicom.1: Make
	  line timestamps three value: every line, every second, and off.

	* man/minicom.1: Wording fix.

2011-02-19  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/vt100.c: Cleanups: Delete everything that was in OLD blocks.
	  Do not explicitly set global variables to 0.

	* src/vt100.c, man/minicom.1: Change timestamp style, prepend every
	  line. Add in manpage.

	* src/dial.c src/help.c src/ipc.c src/minicom.c src/minicom.h
	  src/vt100.c src/vt100.h: Addition by Mark Einon
	  <mark.einon@gmail.com> to add current date/time to each line.

2011-02-14  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/file.c: Only enter directory if we have read permissions to
	  get directory listings, by Jan Görig.

	* src/file.c, src/getsdir.c: Cleanup and simplify.
